gtk_clutter_actor_unrealize: early return if priv->widget is NULL

https://bugzilla.gnome.org/show_bug.cgi?id=670662